# Serbo

./: .gitignore  Cargo.toml  README.md  server.properties
docs/: Cargo.toml
servers/1070414013/: eula.txt  server.properties  usercache.json
servers/1070414013/world/: level.dat_old
servers/1070414013/world/advancements/: b55e710f-d8b1-4ad1-aa1e-0754d63bf69b.json
servers/1070414013/world/region/: r.-1.-1.mca  r.-1.0.mca
servers/1070414013/world/stats/: b55e710f-d8b1-4ad1-aa1e-0754d63bf69b.json
src/: a.rs  lib.rs  main.rs
versions/1.16.1-fabric/: eula.txt  fabric-server-launcher.properties  server.properties
versions/1.16.1-fabric/.mixin.out/audit/: mixin_implementation_report.txt
versions/1.16.1-fabric/world/: carpet.conf
