[package]
name = "serbo-mc"
version = "0.1.4"
authors = ["Reed Krawiec <reedkrawiec@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Easy Minecraft server management."
keywords = ["management", "server","Minecraft","manager"]
repository = "https://github.com/ReedKrawiec/Serbo"
readme = "README.md"
exclude = ["versions/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "serbo"
path = "src/lib.rs"
